examples/test/testpolicy5030.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5030
  namespace: namespace18
spec:
  podSelector:
    matchLabels:
      key3: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value27
          key37: value24
      podSelector:
        matchLabels:
          key27: value29
          key19: value47
